log
Tue Apr 14 01:33:38 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
b8ca565
Tue Apr 14 02:21:28 PM UTC 2026: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/60
adb5053
Tue Apr 14 02:31:30 PM UTC 2026: 
 hashmap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  1|6
total_score: 5/60
a47cc1d
Tue Apr 14 02:32:33 PM UTC 2026: 
 tests:  1|6
total_score: 5/60
a60bf7c
Tue Apr 14 02:47:41 PM UTC 2026: 
 hashmap.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:80:27: error: ‘mapa’ undeclared (first use in this function); did you mean ‘map’?
   80 |     long start = hash(key,mapa->capacity);
      |                           ^~~~
      |                           map
hashmap.c:80:27: note: each undeclared identifier is reported only once for each function it appears in
353866e
Tue Apr 14 02:48:18 PM UTC 2026: 
 hashmap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:85:18: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘bucket’; did you mean ‘buckets’?
   85 |         if (map->bucket[i] == NULL || map->bucket[i]->key == NULL) {
      |                  ^~~~~~
      |                  buckets
hashmap.c:85:44: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘bucket’; did you mean ‘buckets’?
   85 |         if (map->bucket[i] == NULL || map->bucket[i]->key == NULL) {
      |                                            ^~~~~~
      |                                            buckets
hashmap.c:86:18: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘bucket’; did you mean ‘buckets’?
   86 |             map->bucket[i] = createPair(key,value);
      |                  ^~~~~~
      |                  buckets
hashmap.c:95:27: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘bucket’; did you mean ‘buckets’?
   95 |         if (is_equal(map->bucket->key, key)) {
      |                           ^~~~~~
      |                           buckets
9923b6d
Tue Apr 14 02:48:43 PM UTC 2026: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:95:34: error: ‘map->buckets’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   95 |         if (is_equal(map->buckets->key, key)) {
      |                                  ^~
      |                      (*          )
27d737d
Tue Apr 14 02:49:10 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
09fa4de
Tue Apr 14 02:49:59 PM UTC 2026: 
 tests:  5|4
total_score: 20/60
18ef897
